# Quirky_Director

./: .gitignore  Directory_Tree.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
director/: tree_calculator.py  tree_cli.py  tree_driver.py
director.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quirky_director/: __init__.py  __main__.py  tree_cli.py  tree_driver.py
tests/: V1.0.0_test.py  test_v1.py  v1.0.0_Test.py
