[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quirky_director"
version = "1.0.0"
description = "Fork of the Directory-Tree Package that displays out the Tree Structure of a Particular Directory with the added functionality to export to a Directory_Tree text file."
authors = [{name="Sahil Dave"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/SahilDave04/Quirky_Director"
Issues = "https://github.com/SahilDave04/Quirky_Director/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["images*", "directory*"]